# forsit-backend-project

./: .env.example  .flake8  .pre-commit-config.yaml  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1f641b5e3eae_add_product_table.py  4221ab8439e1_added_user_table.py  77e183a86863_add_category_table.py  a2c585c18eb6_add_sales_table.py  e11eecb9a321_add_price_to_product_table.py
api/: api.py  category_api.py  login_api.py  product_api.py  sale_api.py
core/: config.py  constants.py  dep.py
db/: base.py  session.py
models/: __init__.py  base_model.py  category_model.py  product_model.py  sale_model.py  user_model.py
schemas/: category_schema.py  product_schema.py  sale_schema.py
services/: category_services.py  product_services.py  sale_services.py  user_services.py
