[tool.poetry]
name = "forsit-backend-project"
version = "0.1.0"
description = ""
authors = ["Tayyab athar <tayyab.dev.acc@gmail.com>"]
readme = "README.md"
packages = [{include = "forsit_backend_project"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
